<resources>
    <string name="app_name">News App v1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_this_is_heading">Hello This is heading</string>
    <string name="date_test_text">25 sept 2017</string>
    <string name="news_thumbnail">News Thumbnail</string>
    <string name="author_name">Author name</string>
    <string name="news_type">News Type</string>
    <string name="no_internet_connection">No Inernet Connection</string>
    <string name="no_news">No News Data</string>
    <string name="url_part1">https://content.guardianapis.com/search?format=json</string>
    <string name="api_key">api-key=0d7fa385-b5f8-4575-a98a-85b890e847ba</string>
    <string name="url_part2"><![CDATA[&show-tags=contributor&show-fields=headline,thumbnail,short-url&]]></string>
    <string name="from_date"><![CDATA[&from-date=]]></string>
</resources>
