<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/thumbnailImageView"
            android:layout_width="@dimen/_80dp"
            android:layout_height="@dimen/_80dp"
            android:layout_margin="@dimen/_5dp"
            android:contentDescription="@string/news_thumbnail"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/headingTextView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80dp"
            android:layout_margin="@dimen/_5dp"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold|italic"
            android:maxLines="4"
            android:ellipsize="end"
            android:text="@string/hello_this_is_heading"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="@dimen/_0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/date_test_text"
            android:padding="@dimen/_5dp"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textColor="@color/black_color"
            android:textSize="@dimen/_12sp"/>

        <TextView
            android:id="@+id/authorTextView"
            android:layout_width="@dimen/_0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:padding="@dimen/_5dp"
            android:textAlignment="center"
            android:textColor="@color/black_color"
            android:textSize="@dimen/_12sp"/>

        <TextView
            android:id="@+id/newsType"
            android:layout_width="@dimen/_0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/news_type"
            android:textSize="@dimen/_12sp"
            android:padding="@dimen/_5dp"
            android:textAlignment="center"/>

    </LinearLayout>

</LinearLayout>